# copytrade

./: .env.compose.example  .env.example  .gitignore  Caddyfile  DEPLOY.md  SELF-HOST.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.agent-worker  Dockerfile.worker  alembic.ini  pyproject.toml  railway.toml  railway.worker.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260624_0000_0001_initial_schema.py  20260624_0100_ohlcv_hypertable.py  20260624_0200_add_cryptomus.py  20260625_0100_add_performance_indexes.py  20260625_0200_add_master_apply_fields.py  20260625_0300_add_missing_columns.py  20260625_0400_add_subscription_mode.py  20260625_0500_add_notifications.py  20260625_0600_tenant_rls.py  20260626_0100_api_keys.py  20260626_0200_master_reviews.py  20260626_0300_master_certified.py  20260626_0400_master_announcements.py  20260626_0500_subscription_period.py  20260626_0600_agent_analyses.py
apps/api/app/: celery_app.py  main.py
apps/api/app/core/: auth.py  broker_auth.py  celery_app.py  config.py  database.py  internal_auth.py  rate_limit.py  tenant_context.py
apps/api/app/models/: __init__.py  agent_analysis.py  api_key.py  copy_trade.py  leaderboard_score.py  (+12 more)
apps/api/docs/: rls_activate.sql
apps/api/scripts/: verify_rls.py  verify_rls.sh
apps/api/tests/: conftest.py  test_auth.py  test_broker.py  test_internal_auth.py  test_reviews.py  test_routers_import.py  test_schemas.py  test_services_mock.py  test_tenant_rls.py
(+176 files in other folders)
